[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/level_select/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://menus/sprites/menu_background.png" type="Texture" id=2]
[ext_resource path="res://menus/fonts/menu_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="LevelSelect" type="Control" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.250109, 0.32089 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 236.0
margin_bottom = 129.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
text = "Select a level"
uppercase = true

[node name="Levels" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 236.0
margin_bottom = 100.0
custom_constants/separation = 10
alignment = 1

[node name="Level1Button" type="Button" parent="MarginContainer/VBoxContainer/Levels"]
margin_right = 236.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "LEVEL 1"
flat = true

[node name="Level2Button" type="Button" parent="MarginContainer/VBoxContainer/Levels"]
margin_top = 29.0
margin_right = 236.0
margin_bottom = 48.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "LEVEL 2"
flat = true

[node name="Level3Button" type="Button" parent="MarginContainer/VBoxContainer/Levels"]
margin_top = 58.0
margin_right = 236.0
margin_bottom = 77.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "LEVEL 3"
flat = true

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 236.0
margin_bottom = 129.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "BACK"
flat = true
align = 0
[connection signal="pressed" from="MarginContainer/VBoxContainer/Levels/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Levels/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Levels/Level3Button" to="." method="_on_Level3Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
